Prepare public source with FRP support and AGPL-3.0 license